@@ -17,7 +17,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>my_message_attribute_match</string> </value>
+            <value> <string>my_message_attribute_does_not_match</string> </value>
         </item>
         <item>
             <key> <string>message_values</string> </key>
@@ -90,7 +90,7 @@
                 </item>
                 <item>
                     <key> <string>title</string> </key>
-                    <value> <string>Error Message if Property Matchs the Regexp</string> </value>
+                    <value> <string>Error Message if Property does not Match the Regexp</string> </value>
                 </item>
               </dictionary>
             </value>
