@@ -22,7 +22,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>message_attribute_match_property</string> </value>
+            <value> <string>message_attribute_does_not_match_property</string> </value>
         </item>
         <item>
             <key> <string>portal_type</string> </key>
@@ -30,7 +30,7 @@
         </item>
         <item>
             <key> <string>property_default</string> </key>
-            <value> <string>python: \'Attribute ${attribute_name} is ${attribute_value} and matches ${regular_expression}\'</string> </value>
+            <value> <string>python: \'Attribute ${attribute_name} is ${attribute_value} and does not match ${regular_expression}\'</string> </value>
         </item>
       </dictionary>
     </pickle>
